tests/neg-custom-args/captures/mutability.check
-- Error: tests/neg-custom-args/captures/mutability.scala:4:24 ---------------------------------------------------------
4 |  def hide(x: T) = this.set(x) // error
  |                   ^^^^^^^^
  |                   Cannot call update method set of Ref.this
  |                   since the access is in method hide, which is not an update method.
-- Error: tests/neg-custom-args/captures/mutability.scala:9:9 ----------------------------------------------------------
9 |    self.set(x)  // error
  |    ^^^^^^^^
  |    Cannot call update method set of self
  |    since its capture set {self} is read-only.
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/mutability.scala:10:25 -----------------------------------
10 |    val self2: Ref[T]^ = this // error
   |                         ^^^^
   |           Found:    Ref[T]^{Ref.this.rd}
   |           Required: Ref[T]^
   |
   |           Note that capability Ref.this.rd is not included in capture set {}.
   |
   |           Note that {cap} is an exclusive capture set of the mutable type Ref[T]^,
   |           it cannot subsume a read-only capture set of the mutable type Ref[T]^{Ref.this.rd}.
   |
   |           where:    ^ and cap refer to a fresh root capability classified as Mutable in the type of value self2
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/mutability.scala:11:13 --------------------------------------------------------
11 |    self2.set(x) // error
   |    ^^^^^^^^^^^^
   |    Read-only method sneakyHide accesses exclusive capability (Ref.this : Ref[T]^);
   |    method sneakyHide should be declared an update method to allow this.
   |
   |    where:    ^ refers to a fresh root capability classified as Mutable in the type of class Ref
-- Error: tests/neg-custom-args/captures/mutability.scala:14:12 --------------------------------------------------------
14 |    self3().set(x)  // error
   |    ^^^^^^^^^^^
   |    Cannot call update method set of Ref[T^{}]^{self3}
   |    since its capture set {self3} is read-only.
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/mutability.scala:15:31 -----------------------------------
15 |    val self4: () => Ref[T]^ = () => this // error
   |                               ^^^^^^^^^^
   |           Found:    () ->{Ref.this.rd} Ref[T^'s1]^{Ref.this.rd}
   |           Required: () => Ref[T]^
   |
   |           Note that capability Ref.this.rd is not included in capture set {}.
   |
   |           Note that {cap} is an exclusive capture set of the mutable type Ref[T]^,
   |           it cannot subsume a read-only capture set of the mutable type Ref[T^'s1]^{Ref.this.rd}.
   |
   |           where:    =>        refers to a fresh root capability in the type of value self4
   |                     ^ and cap refer to a fresh root capability classified as Mutable in the type of value self4
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/mutability.scala:16:15 --------------------------------------------------------
16 |    self4().set(x) // error
   |    ^^^^^^^^^^^^^^
   |    Read-only method sneakyHide accesses exclusive capability (Ref.this : Ref[T]^);
   |    method sneakyHide should be declared an update method to allow this.
   |
   |    where:    ^ refers to a fresh root capability classified as Mutable in the type of class Ref
-- Error: tests/neg-custom-args/captures/mutability.scala:19:12 --------------------------------------------------------
19 |    self5().set(x)  // error
   |    ^^^^^^^^^^^
   |    Cannot call update method set of Ref[T^{}]^{Ref.this.rd}
   |    since its capture set {Ref.this.rd} of method self5 is read-only.
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/mutability.scala:20:27 -----------------------------------
20 |    def self6(): Ref[T]^ = this // error
   |                           ^^^^
   |   Found:    Ref[T]^{Ref.this.rd}
   |   Required: Ref[T]^
   |
   |   Note that capability Ref.this.rd is not included in capture set {}.
   |
   |   Note that {cap} is an exclusive capture set of the mutable type Ref[T]^,
   |   it cannot subsume a read-only capture set of the mutable type Ref[T]^{Ref.this.rd}.
   |
   |   where:    ^ and cap refer to a fresh root capability classified as Mutable in the result type of method self6
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/mutability.scala:21:15 --------------------------------------------------------
21 |    self6().set(x) // error
   |    ^^^^^^^^^^^^^^
   |    Read-only method sneakyHide accesses exclusive capability (Ref.this : Ref[T]^);
   |    method sneakyHide should be declared an update method to allow this.
   |
   |    where:    ^ refers to a fresh root capability classified as Mutable in the type of class Ref
-- Error: tests/neg-custom-args/captures/mutability.scala:25:25 --------------------------------------------------------
25 |  def set(x: T) = this.x.set(x) // error
   |                  ^^^^^^^^^^
   |                  Cannot call update method set of Ref2.this.x
   |                  since the access is in method set, which is not an update method.
-- Error: tests/neg-custom-args/captures/mutability.scala:32:5 ---------------------------------------------------------
32 |  r1.set(33) // error
   |  ^^^^^^
   |  Cannot call update method set of r1
   |  since its capture set {r1} is read-only.
-- Error: tests/neg-custom-args/captures/mutability.scala:37:7 ---------------------------------------------------------
37 |  r3.x.set(33) // error
   |  ^^^^^^^^
   |  Cannot call update method set of r3.x
   |  since the capture set {r3} of its prefix (r3 : Ref2[Int]) is read-only.
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/mutability.scala:42:29 -----------------------------------
42 |  val r5: () => Ref2[Int]^ = () => ref2 // error
   |                             ^^^^^^^^^^
   |              Found:    () ->{ref2.rd} Ref2[Int]^{ref2}
   |              Required: () => Ref2[Int]^
   |
   |              Note that capability ref2 is not included in capture set {}.
   |
   |              Note that {cap} is an exclusive capture set of the mutable type Ref2[Int]^,
   |              it cannot subsume a read-only capture set of the mutable type Ref2[Int]^{ref2}.
   |
   |              where:    =>        refers to a fresh root capability in the type of value r5
   |                        ^ and cap refer to a fresh root capability classified as Mutable in the type of value r5
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/mutability.scala:45:9 ---------------------------------------------------------
45 |  r6().x.set(33) // error
   |  ^^^^^^^^^^
   |  Cannot call update method set of Ref[Int]^{r6*.rd}
   |  since its capture set {r6*.rd} is read-only.
